public/app.css
/* || BODY */
body {
    display: flex;
    justify-content: center;
    height: 100vh;
    background-color: black;
}
.main-content {
    height: inherit;
    display: flex;
    width: 100%;
    padding-top: 4.75rem;
    padding-bottom: 0.5rem;
    flex-direction: column;
    justify-content: flex-start;
}
.main-content > div {
    padding-left: 2%;
    /* padding-right: 2%; */
}
.little-label {
    color: white;
    font-size: 0.75em;
    text-transform: lowercase;
}
.material-icons {
    position: relative;
    text-align: center;
    vertical-align: middle;
    font-size: 2rem;
}

/* || NAVBAR */
.top-nav {
    position: fixed;
    width: 100%;
    height: 4rem;
    z-index: 1000;
}
.top-nav .navbar-nav {
    flex-direction: row;
}
.top-nav .nav-item {
    margin-right: 1rem;
}
.top-nav .d-flex {
    align-items: center;
}
#sign-in-button {
    float: right;
    font-size: 1.95rem;
    color: white;
    cursor: pointer;
    transition: color 0.2s ease;
    height: 35px;
    width: 35px;
    border-radius: 50%;
    background-size: cover;
}
#sign-in-button:hover {
    color: #5573f3;
}
#profile-icon {
    font-size: inherit;
    display: flex;
}

/* || Bottom bar (mobile) */
#show-chart-button {
    color: #232323;
}
#show-chart-button:hover {
    color: #aaaaaa;
}

/* || Filter bar */
#filter-bar {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    border-bottom: 1px solid white;
    padding-bottom: 0.75rem;
}
#filter-bar > .filter-group,
#filter-bar > .question-action {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-left: 10px;
    margin-right: 10px;
}

#filter-bar .point-list-item.disabled {
    text-decoration: line-through;
    color: gray;
}

#filter-bar .full-btn-group {
    display: flex;
}

#public-mastercat-dropdown {
    overflow: hidden;
    width: 0%;
    transition: all 0.4s ease;
}
#public-mastercat-dropdown.expanded {
    width: 100%;
}

#filter-bar .add-option-button {
    box-sizing: border-box;
    width: 0%;
    padding-right: 0;
    padding-left: 0;
    transition: all 0.4s ease;
    /* transition-delay: 0.4s; */
    overflow: hidden;
}
#filter-bar .add-option-button.expanded {
    width: 100%;
    padding-right: 0.75rem;
    padding-left: 0.75rem;
}

#filter-bar .expanded-container {
    overflow: hidden;
    width: 0%;
    transition: width 0.4s ease;
    /* transition-delay: 0.2s; */
}
#filter-bar .expanded-container.expanded {
    width: 100%;
}

/* || Quick Question Count Bar */
#quick-question-count-bar {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    font-size: 1.25em;
    border-top: 1px solid white;
    padding-top: 0.5rem;
}
#quick-question-count-bar > .insufficient {
    color: #f35353;
}
#quick-question-count-bar > .active {
    border-bottom: 2px solid;
}

/* || Question section */
#question-section {
    display: flex;
    flex-direction: row;
    height: 100%;
    padding: 0.75em;
    padding-top: 0.25em;
}
#question-data-section {
    display: flex;
    height: 100%;
    flex-direction: column;
    overflow-y: scroll;
    word-break: break-word;
}
#question-data-section::-webkit-scrollbar {
    width: 0; /* Remove scrollbar space */
    background: transparent; /* Optional: just make scrollbar invisible */
}
/* Optional: show position indicator in red */
#question-data-section::-webkit-scrollbar-thumb {
    background: #ff0000;
}
#question-data-section #question-actions-mobile {
    margin-top: auto;
}
#question-data-section .little-label {
    color: gray;
}
.question-data {
    color: white;
    font-size: 100%;
}
.question-action > .btn-outline-primary:active,
.question-action > .btn-outline-primary:focus,
#question-actions-mobile > .btn-outline-primary:focus {
    color: #5573f3 !important;
    border-color: #5573f3 !important;
    background-color: transparent !important;
}

#question-data-section .plan-group {
    width: 0%;
    height: 0;
    overflow: hidden;
    transition: all 0.5s ease;
}
#question-data-section.planning .plan-group {
    width: 100%;
    height: initial;
}
#question-data-section.planning .question-data {
    display: none;
}

/* || Input Modal */
#public-radio-set {
    display: flex;
    justify-content: space-evenly;
}

/* || Cat Count Chart */
#chart-container {
    width: 50%;
    height: 100%;
}

/* Question data table */
#questions-table-section {
    max-height: 45%;
    color: white;
    border-top: 1px solid white;
}
#questions-table {
    color: white;
}
#questions-table th {
    color: #5573f3;
}
.dataTable-sorter::before {
    border-top: 4px solid #5573f3;
}
.dataTable-sorter::after {
    border-bottom: 4px solid #5573f3;
}

/* Desktop */
@media (min-width: 35.1em) {
    .question-data {
        font-size: 1.5rem;
    }
    #quick-question-count-bar {
        display: none;
    }
    #chart-container {
        display: block;
    }
    #question-data-section {
        width: 50%;
    }
    #question-actions-mobile {
        display: none;
    }
    #filter-bar > .question-action {
        display: flex;
    }
    #show-chart-button {
        display: none;
    }
}
/* MOBILE */
@media (max-width: 35em) {
    #quick-question-count-bar {
        display: flex;
    }
    #chart-container {
        visibility: hidden;
        position: fixed;
        width: 95%;
        height: 50%;
        top: 35%;
        z-index: 1000;
        padding: 5px;
        border-radius: 20px;
        background-color: #232323;
        animation-duration: 0.75s;
    }
    #question-data-section {
        width: 100%;
    }
    #question-actions-mobile {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }
    #create-modify-button-mobile {
        min-width: 95px;
    }
    #filter-bar > .question-action {
        display: none;
    }
    #questions-table-section {
        display: none;
    }
}

/* || Animation */
.animated {
    visibility: visible !important;
}

.rotate {
    -webkit-transform: rotateX(180deg);
    transform: rotateX(180deg);
}

/* || TOGGLE */
.switch {
    position: relative;
    display: flex;
    width: 60px;
    height: 100%;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    width: 100%;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: transparent;
    border: 1px solid #5573f3;
    -webkit-transition: 0.4s;
    transition: 0.4s;
    flex-direction: column;
    justify-content: center;
    display: flex;
    padding: 5%;
}

.slider:before {
    display: block;
    content: '';
    height: 26px;
    width: 26px;
    background-color: #5573f3;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

input:checked + .slider {
    background-color: #5573f3;
}

input:focus + .slider {
    box-shadow: 0 0 1px #5573f3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
    background-color: white;
}

/* || BOOTSTRAP OVERRIDES */
.btn {
    border-radius: 0;
}
.btn-outline-primary {
    color: #5573f3;
    border-color: #5573f3;
}
.btn-outline-primary:hover {
    color: white;
    border-color: #5573f3;
    background-color: #5573f3;
}
.btn-outline-primary.active,
.btn-outline-primary:active,
.btn-outline-primary:focus,
.btn-outline-primary:active:focus {
    color: white !important;
    border-color: #5573f3 !important;
    background-color: #5573f3 !important;
}
.btn-check:checked + .btn-outline-primary {
    color: white;
    border-color: #5573f3;
    background-color: #5573f3;
}
.btn-check:active + .btn-outline-primary:focus,
.btn-check:checked + .btn-outline-primary:focus,
.btn-outline-primary.active:focus,
.btn-outline-primary.dropdown-toggle.show:focus,
.btn-outline-primary:active:focus {
    box-shadow: none;
}
.btn-check:active + .btn-outline-primary,
.btn-check:checked + .btn-outline-primary,
.btn-outline-primary.active,
.btn-outline-primary.dropdown-toggle.show,
.btn-outline-primary:active {
    box-shadow: none;
}
.btn-check:focus + .btn-outline-primary,
.btn-outline-primary:focus {
    box-shadow: none;
}
.btn-outline-primary.dropdown-toggle.show {
    color: #5573f3;
    background-color: transparent;
    border-color: #5573f3;
}
.btn-action {
    border-radius: 20px;
}
.dropdown-menu {
    border-radius: 0;
    background-color: black;
    border: 1px solid #5573f3;
    padding: 0;
}
.dropdown-item {
    color: #5573f3;
    border: 1px solid #5573f3;
    cursor: pointer;
}
.dropdown-item:focus,
.dropdown-item:hover {
    color: white;
    background-color: #5573f3;
}

/* || Pure CSS Loader */
.lds-ellipsis {
    display: inline-block;
    position: relative;
    width: 80px;
    height: 100%;
}
.lds-ellipsis div {
    position: absolute;
    top: 33px;
    width: 13px;
    height: 13px;
    border-radius: 50%;
    background: #5573f3;
    animation-timing-function: cubic-bezier(0, 1, 1, 0);
}
.lds-ellipsis div:nth-child(1) {
    left: 8px;
    animation: lds-ellipsis1 0.6s infinite;
}
.lds-ellipsis div:nth-child(2) {
    left: 8px;
    animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(3) {
    left: 32px;
    animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(4) {
    left: 56px;
    animation: lds-ellipsis3 0.6s infinite;
}
@keyframes lds-ellipsis1 {
    0% {
        transform: scale(0);
    }
    100% {
        transform: scale(1);
    }
}
@keyframes lds-ellipsis3 {
    0% {
        transform: scale(1);
    }
    100% {
        transform: scale(0);
    }
}
@keyframes lds-ellipsis2 {
    0% {
        transform: translate(0, 0);
    }
    100% {
        transform: translate(24px, 0);
    }
}

/* || W3Schools Snackbar */
/* The snackbar - position it at the bottom and in the middle of the screen */
#snackbar {
    visibility: hidden; /* Hidden by default. Visible on click */
    min-width: 250px; /* Set a default minimum width */
    background-color: #333; /* Black background color */
    color: #fff; /* White text color */
    text-align: center; /* Centered text */
    border-radius: 2px; /* Rounded borders */
    padding: 16px; /* Padding */
    position: fixed; /* Sit on top of the screen */
    bottom: 30px; /* 30px from the bottom */
    z-index: 1000;
}

/* Show the snackbar when clicking on a button (class added with JavaScript) */
#snackbar.show {
    visibility: visible; /* Show the snackbar */
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
    from {
        bottom: 0;
        opacity: 0;
    }
    to {
        bottom: 30px;
        opacity: 1;
    }
}

@keyframes fadein {
    from {
        bottom: 0;
        opacity: 0;
    }
    to {
        bottom: 30px;
        opacity: 1;
    }
}

@-webkit-keyframes fadeout {
    from {
        bottom: 30px;
        opacity: 1;
    }
    to {
        bottom: 0;
        opacity: 0;
    }
}

@keyframes fadeout {
    from {
        bottom: 30px;
        opacity: 1;
    }
    to {
        bottom: 0;
        opacity: 0;
    }
}

/* || Textarea styles from https://codepen.io/mmarsaustin/details/PobVBoJ*/
textarea {
    resize: none;
}
textarea {
    background: none;
    color: #c6c6c6;
    font-size: 18px;
    padding: 10px 10px 10px 5px;
    display: block;
    width: 90%;
    height: 48px;
    border: none;
    border-radius: 0;
    border-bottom: 1px solid #c6c6c6;
}
textarea:focus {
    outline: none;
}
textarea:focus ~ .bar:before {
    width: 90%;
}

.bar {
    position: relative;
    display: block;
    width: 100%;
}
.bar:before {
    content: '';
    height: 2px;
    width: 0;
    bottom: 0px;
    position: absolute;
    background: #fff;
    transition: 300ms ease all;
    left: 0%;
}

